// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

export enum Aggregate {
  BoardMember = "BoardMember",
  ByLaw = "ByLaw",
  MaintenanceRequest = "MaintenanceRequest",
  Member = "Member",
  Notice = "Notice",
  Report = "Report",
  Role = "Role",
  StaffMember = "StaffMember",
  User = "User",
  Message = "Message",
  JsonContent = "JsonContent",
  Theme = "Theme"
}

