namespace Coop.Domain.Identity;

public enum AccessRight
{
    None = 0,
    Read = 1,
    Write = 2,
    Create = 3,
    Delete = 4
}
